# artha

./: FINANCIAL_ACCURACY_ANALYSIS.md  QUICK_FIX_GUIDE.md  QWEN.md  README.md  config.yaml  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
.qwen/: settings.json
data/: artha.db
data/cache/: BAJFINANCE.csv  BAJFINANCE_30.csv  BAJFINANCE_365.csv  BHARTIARTL.csv  BHARTIARTL_365.csv  HDFCBANK.csv  HDFCBANK_2000.csv  HDFCBANK_30.csv  HINDUNILVR.csv  HINDUNILVR_2000.csv  HINDUNILVR_30.csv  HINDUNILVR_365.csv  ICICIBANK.csv  ICICIBANK_2000.csv  ICICIBANK_30.csv  ICICIBANK_365.csv  INFY.csv  INFY_2000.csv  (+17 more)
docs/: CODE_REVIEW_QWEN_FIXES.md  CRITICAL_DATABASE_BUG.md  DETAILED_IMPROVEMENT_PLAN.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_GUIDE.md  ENHANCEMENT_PLAN_REVIEW.md  FINAL_WATCHLIST_SUMMARY.md  HOW_TO_USE_THESE_INSTRUCTIONS.md  ISSUE1_CORRECT_FIX.md  LAYOUT_BUGS_FIXED.md  LAYOUT_FIXES_APPLIED.md  QWEN_CRITICAL_FIXES_NOW.md  QWEN_ENHANCEMENT_PROMPT.md  QWEN_INSTRUCTIONS_COPYPASTE.txt  QWEN_START_HERE.md  WATCHLIST_BUGFIX.md  WATCHLIST_IMPLEMENTATION_SUMMARY.md  WATCHLIST_KEYBOARD_TEST.md  WATCHLIST_TEST_RESULTS.md  artha_hld.md  index.md
mcp_servers/: setup_gemini_config.py
src/: __init__.py  config.py  main.py
tests/: test_app.py  test_bug3_transaction_persistence.py  test_bug4_complete_transaction_costs.py  test_coach.py  test_cost_basis_fix.py  test_database.py  test_financial_accuracy.py  test_improvements.py  test_market_data.py  test_realized_pnl.py  test_trade_executor.py  test_trading.py  test_watchlist_gameplay.py  test_watchlist_integration.py
(+52 files in other folders)
