[project]
name = "artha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.0",
    "fastapi-cli>=0.0.14",
    "fastapi-cloud-cli>=0.3.1",
    "fastapi[standard]>=0.119.1",
    "fastmcp>=2.12.5",
    "httptools>=0.7.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotext>=5.3.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.0.0",
    "rich-toolkit>=0.15.1",
    "rignore>=0.7.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sentry-sdk>=2.43.0",
    "sqlalchemy>=2.0.40",
    "textual>=6.4.0",
    "textual-dev>=1.8.0",
    "tqdm>=4.66.5",
    "typer>=0.20.0",
    "typing-extensions>=4.7.1",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "yfinance>=0.2.60",
]
